// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcMainContainer should not display the titleIntro when title is not given 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <!--v-if-->
  
  
</div>
`;

exports[`EcMainContainer should render both titles when they are given in props 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-grid"
  >
    <div
      class="tw-col-full"
    >
      <!--v-if-->
      <h1
        class="ec-main-container__title"
        data-test="ec-main-container__title"
      >
        Trade Finance
      </h1>
      <p
        class="ec-main-container__title-intro"
        data-test="ec-main-container__title-intro"
      >
        Here you will be able to keep track of all your requests to Ebury and your credit line.
      </p>
    </div>
    <!--v-if-->
  </div>
  
  
</div>
`;

exports[`EcMainContainer should render empty if no props were given 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <!--v-if-->
  
  
</div>
`;

exports[`EcMainContainer should render without title intro when the titleIntro prop is not given 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-grid"
  >
    <div
      class="tw-col-full"
    >
      <!--v-if-->
      <h1
        class="ec-main-container__title"
        data-test="ec-main-container__title"
      >
        Trade Finance
      </h1>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  
  
</div>
`;

exports[`EcMainContainer should use given slot 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-grid"
  >
    <div
      class="tw-col-full"
    >
      <!--v-if-->
      <h1
        class="ec-main-container__title"
        data-test="ec-main-container__title"
      >
        Trade Finance
      </h1>
      <p
        class="ec-main-container__title-intro"
        data-test="ec-main-container__title-intro"
      >
        Here you will be able to keep track of all your requests to Ebury and your credit line.
      </p>
    </div>
    <!--v-if-->
  </div>
  
  <p>
    Random text
  </p>
  
</div>
`;

exports[`EcMainContainer should use the given named breadcrumbs slot 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-grid"
  >
    <div
      class="tw-col-full"
    >
      <div
        class="ec-main-container__breadcrumbs"
        data-test="ec-main-container__breadcrumbs"
      >
        
        <a
          href="#"
        >
          Breadcrumbs
        </a>
        
      </div>
      <h1
        class="ec-main-container__title"
        data-test="ec-main-container__title"
      >
        Trade Finance
      </h1>
      <p
        class="ec-main-container__title-intro"
        data-test="ec-main-container__title-intro"
      >
        Here you will be able to keep track of all your requests to Ebury and your credit line.
      </p>
    </div>
    <!--v-if-->
  </div>
  
  
</div>
`;

exports[`EcMainContainer should use the given named cta slot 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-grid"
  >
    <div
      class="tw-col-full sm:tw-col-9"
    >
      <!--v-if-->
      <h1
        class="ec-main-container__title"
        data-test="ec-main-container__title"
      >
        Trade Finance
      </h1>
      <p
        class="ec-main-container__title-intro"
        data-test="ec-main-container__title-intro"
      >
        Here you will be able to keep track of all your requests to Ebury and your credit line.
      </p>
    </div>
    <div
      class="tw-col-full sm:tw-col-3"
      data-test="ec-main-container__cta"
    >
      
      <button
        class="ec-btn ec-btn--rounded ec-btn--primary ec-btn--md ec-btn--full-width"
      >
        Test cta
      </button>
      
    </div>
  </div>
  
  
</div>
`;
